tests/ui/trait-bounds/ownership-mismatch-on-arg.stderr
error[E0277]: the trait bound `&needs_deref::Hello: needs_deref::Tr` is not satisfied
  --> $DIR/ownership-mismatch-on-arg.rs:19:13
   |
LL |             foo(hi, hi, hi);
   |             ^^^ --  -- `&needs_deref::Hello` doesn't satisfy the trait bound
   |             |   |
   |             |   `&needs_deref::Hello` doesn't satisfy the trait bound
   |             the trait `needs_deref::Tr` is not implemented for `&needs_deref::Hello`
   |
help: the trait `needs_deref::Tr` is implemented for `needs_deref::Hello`
  --> $DIR/ownership-mismatch-on-arg.rs:7:5
   |
LL |     impl Tr for Hello {}
   |     ^^^^^^^^^^^^^^^^^
note: required by a bound in `needs_deref::foo`
  --> $DIR/ownership-mismatch-on-arg.rs:9:15
   |
LL |     fn foo<T: Tr, K: std::fmt::Debug>(_v: T, _w: T, _k: K) {}
   |               ^^ required by this bound in `foo`

error[E0277]: the trait bound `&needs_deref::Hello: needs_deref::Tr` is not satisfied
  --> $DIR/ownership-mismatch-on-arg.rs:20:15
   |
LL |             S.foo(hi, hi, hi);
   |               ^^^ --  -- `&needs_deref::Hello` doesn't satisfy the trait bound
   |               |   |
   |               |   `&needs_deref::Hello` doesn't satisfy the trait bound
   |               the trait `needs_deref::Tr` is not implemented for `&needs_deref::Hello`
   |
help: the trait `needs_deref::Tr` is implemented for `needs_deref::Hello`
  --> $DIR/ownership-mismatch-on-arg.rs:7:5
   |
LL |     impl Tr for Hello {}
   |     ^^^^^^^^^^^^^^^^^
note: required by a bound in `needs_deref::S::foo`
  --> $DIR/ownership-mismatch-on-arg.rs:13:39
   |
LL |         fn foo<K: std::fmt::Debug, T: Tr>(&self, _v: T, _w: T, _k: K) {}
   |                                       ^^ required by this bound in `S::foo`

error[E0277]: the trait bound `needs_borrow::Hello: needs_borrow::Tr` is not satisfied
  --> $DIR/ownership-mismatch-on-arg.rs:42:13
   |
LL |             foo(hi, hi, hi);
   |             ^^^ --  -- `needs_borrow::Hello` doesn't satisfy the trait bound
   |             |   |
   |             |   `needs_borrow::Hello` doesn't satisfy the trait bound
   |             unsatisfied trait bound
   |
help: the trait `needs_borrow::Tr` is not implemented for `needs_borrow::Hello`
  --> $DIR/ownership-mismatch-on-arg.rs:27:5
   |
LL |     struct Hello;
   |     ^^^^^^^^^^^^
help: the trait `needs_borrow::Tr` is implemented for `&needs_borrow::Hello`
  --> $DIR/ownership-mismatch-on-arg.rs:30:5
   |
LL |     impl Tr for &Hello {}
   |     ^^^^^^^^^^^^^^^^^^
note: required by a bound in `needs_borrow::foo`
  --> $DIR/ownership-mismatch-on-arg.rs:32:15
   |
LL |     fn foo<T: Tr, K: std::fmt::Debug>(_v: T, _w: T, _k: K) {}
   |               ^^ required by this bound in `foo`
help: consider borrowing these argument
   |
LL |             foo(&hi, &hi, hi);
   |                 +    +

error[E0277]: the trait bound `needs_borrow::Hello: needs_borrow::Tr` is not satisfied
  --> $DIR/ownership-mismatch-on-arg.rs:43:15
   |
LL |             S.foo(hi, hi, hi);
   |               ^^^ --  -- `needs_borrow::Hello` doesn't satisfy the trait bound
   |               |   |
   |               |   `needs_borrow::Hello` doesn't satisfy the trait bound
   |               unsatisfied trait bound
   |
help: the trait `needs_borrow::Tr` is not implemented for `needs_borrow::Hello`
  --> $DIR/ownership-mismatch-on-arg.rs:27:5
   |
LL |     struct Hello;
   |     ^^^^^^^^^^^^
help: the trait `needs_borrow::Tr` is implemented for `&needs_borrow::Hello`
  --> $DIR/ownership-mismatch-on-arg.rs:30:5
   |
LL |     impl Tr for &Hello {}
   |     ^^^^^^^^^^^^^^^^^^
note: required by a bound in `needs_borrow::S::foo`
  --> $DIR/ownership-mismatch-on-arg.rs:36:19
   |
LL |         fn foo<T: Tr, K: std::fmt::Debug>(&self, _v: T, _w: T, _k: K) {}
   |                   ^^ required by this bound in `S::foo`
help: consider borrowing these argument
   |
LL |             S.foo(&hi, &hi, hi);
   |                   +    +

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
